# sdk-python

./: .flake8  .gitignore  .isort.cfg  CLAUDE.md  CNAME  LICENSE  README.md  genindex.html  index.html  objects.inv  package-lock.json  pyproject.toml  regions.html  search.html  searchindex.js
.github/: pull_request_template.md
.github/workflows/: publish.yml  tests.yml
Account/: index.html
Account/Billing/: Billing_Type.html  index.html
Account/Buckets/: index.html
Account/Devices/: Devices_Type.html  index.html
Account/Profile/: index.html
Device/: Device_Type.html  index.html
Resources/: index.html
Resources/Access/: Access_Type.html  index.html
Resources/Account/: Account_type.html  index.html
Resources/Actions/: Actions_Type.html  index.html
Resources/Analysis/: Analysis_Type.html  index.html
Resources/Billing/: Billing_Type.html  index.html
Resources/Buckets/: index.html
Resources/Dashboards/: Dashboard_Type.html  index.html
Resources/Devices/: Devices_Type.html  index.html
Resources/Dictionaries/: Dictionaries_Type.html  index.html
Resources/Files/: Files_Type.html  index.html
Resources/IntegrationConnector/: IntegrationConnector_Type.html  index.html
Resources/IntegrationNetwork/: IntegrationNetwork_Type.html  index.html
Resources/Notifications/: Notification_Type.html  index.html
Resources/Profile/: Profile_Types.html  index.html
Resources/Run/: Run_Types.html  index.html
Resources/Secrets/: Secrets_Type.html  index.html
Resources/ServiceAuthorization/: Service_Authorization_Types.html  index.html
Services/: Attachment_Type.html  Email_Type.html  MQTT_Type.html  Notification_Type.html  Pdf_Type.html  SMS_Type.html  index.html
Utils/: index.html
_sources/: index.rst.txt  regions.rst.txt
_sources/Account/: index.rst.txt
_sources/Account/Billing/: index.rst.txt
_sources/Account/Profile/: index.rst.txt
_sources/Device/: Device_Type.rst.txt  index.rst.txt
_sources/Resources/: index.rst.txt
_sources/Resources/Access/: Access_Type.rst.txt  index.rst.txt
_sources/Resources/Account/: Account_type.rst.txt  index.rst.txt
_sources/Resources/Actions/: Actions_Type.rst.txt  index.rst.txt
_sources/Resources/Analysis/: index.rst.txt
_sources/Resources/Billing/: Billing_Type.rst.txt  index.rst.txt
_sources/Resources/Buckets/: index.rst.txt
_sources/Resources/Dashboards/: Dashboard_Type.rst.txt
_sources/Resources/Devices/: Devices_Type.rst.txt  index.rst.txt
_sources/Resources/Dictionaries/: Dictionaries_Type.rst.txt  index.rst.txt
_sources/Resources/Files/: Files_Type.rst.txt
_sources/Resources/IntegrationConnector/: IntegrationConnector_Type.rst.txt  index.rst.txt
_sources/Resources/IntegrationNetwork/: index.rst.txt
_sources/Resources/Notifications/: index.rst.txt
_sources/Resources/Profile/: Profile_Types.rst.txt  index.rst.txt
_sources/Resources/Run/: Run_Types.rst.txt  index.rst.txt
_sources/Resources/Secrets/: index.rst.txt
_sources/Services/: Attachment_Type.rst.txt  Email_Type.rst.txt  MQTT_Type.rst.txt  Notification_Type.rst.txt  Pdf_Type.rst.txt  index.rst.txt
_sources/Utils/: index.rst.txt
_sources/common/: Common_Type.rst.txt
common/: Common_Type.html
docs/source/: conf.py  index.rst  reference.rst
docs/source/Account/: index.rst
docs/source/Account/Account/: index.rst
docs/source/Account/Billing/: Billing_Type.rst  index.rst
docs/source/Account/Buckets/: index.rst
docs/source/Account/Dashboards/: Dashboard_Type.rst  index.rst
docs/source/Account/Devices/: Devices_Type.rst  index.rst
docs/source/Account/IntegrationNetwork/: IntegrationNetwork_Type.rst  index.rst
docs/source/Account/Profile/: index.rst
docs/source/Account/Run/: Run_Types.rst  index.rst
docs/source/Class/: index.rst
docs/source/Class/Device/: index.rst
docs/source/Dashboards/: Dashboard_Type.rst
docs/source/Device/: Device_Type.rst  index.rst
docs/source/Resources/: index.rst
docs/source/Resources/Access/: index.rst
docs/source/Resources/Account/: Account_type.rst  index.rst
docs/source/Resources/Actions/: Actions_Type.rst  index.rst
docs/source/Resources/Analysis/: Analysis_Type.rst  index.rst
docs/source/Resources/Billing/: Billing_Type.rst  index.rst
docs/source/Resources/Dashboards/: Dashboard_Type.rst  index.rst
docs/source/Resources/Devices/: Devices_Type.rst  index.rst
docs/source/Services/: Email_Type.rst  MQTT_Type.rst  Notification_Type.rst  Pdf_Type.rst  SMS_Type.rst  index.rst
docs/source/common/: Common_Type.rst
src/tagoio_sdk/: __init__.py  config.py  params.py  regions.py  types.py
src/tagoio_sdk/common/: Cache.py  Common_Type.py  Hash_Generator.py  JSON_Parse_Safe.py  tagoio_module.py
src/tagoio_sdk/infrastructure/: api_request.py  api_socket.py  api_sse.py
tests/: conftest.py  test_sdk_python.py
tests/Account/: test_account.py  test_integration_network.py  test_profile.py
tests/AccountDeprecated/: test_account.py  test_device.py  test_integration_network.py  test_profile.py
tests/Device/: test_device.py
tests/Regions/: test_tdeploy.py
tests/Resources/: test_access.py  test_account.py  test_actions.py  test_analyses.py  test_dashboards.py  test_devices.py  test_dictionaries.py  test_files.py  test_integration_connector.py  test_integration_network.py  test_notifications.py  test_profile.py  test_run.py  test_secrets.py  test_service_authorization.py
tests/Utils/: test_env_to_json.py  test_send_downlink.py
tests/commom/: test_tagoio_module.py
(+91 files in other folders)
