[tool.poetry]
name = "tagoio-sdk"
version = "4.3.0"
description = "Official Python SDK for TagoIO"
authors = ["TagoIO Inc. <contact@tago.io>"]
license = "Apache License"
readme = "README.md"
homepage = "https://tago.io/"
repository = "https://github.com/tago-io/sdk-python/"
documentation = "https://py.sdk.tago.io/"
keywords = ["tagoio", "iot", "analysis", "tago", "sensor", "device"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
    { include = "tagoio_sdk", from = "src" }
]
# include = [
    # { path = "poetry.lock", format = "sdist" }
    # { path = "tests", format = "sdist" }
# ]

[tool.poetry.dependencies]
python = "^3.9"
requests = "2.28.2"
python-dateutil = "^2.8.2"
python-socketio = {extras = ["asyncio_client"], version = "^5.7.2"}
aiohttp = "^3.8.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^4.0.1"
isort = "^5.10.1"
black = "^22.3.0"
flake8-annotations = "^2.9.0"
Sphinx = "^4.5.0"
flake8-black = "^0.3.2"
requests_mock = "^1.9.3"

[tool.isort]
py_version = 37
profile = "black"
force_single_line = true
combine_as_imports = true
lines_between_types = 1
lines_after_imports = 2
src_paths = ["src", "tests"]
extend_skip = ["setup.py"]

[tool.black]
target-version = ['py37']
preview = true
force-exclude = '''
.*/setup\.py$
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
